Fix OpenCode free models and prompt delivery (#38)
* Fix opencode prompt delivery and free model list

* Fix unused PostStartCommand import

* Trigger OpenCode completion hook on idle status

* Fallback OpenCode completion detection

* Fix worker bundle path-to-regexp resolution

* Start openapi generator before dev servers

* fix: improve OpenCode completion detection and type safety

- Add type guard for cleaner check-requirements options handling
- Fix completion detection to read messages from storage directly
  (OpenCode SDK client.session.messages() API is broken)
- Detect errored sessions (e.g., "Forbidden") by checking error object
- Only fire completion hook when assistant message has finish reason
  and no error, preventing invalid model errors from marking complete
- Add detailed logging to /root/lifecycle/opencode-plugin.log for debugging

--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -26,6 +26,10 @@
       "import": "./src/providers/amp/start-amp-proxy.ts",
       "types": "./src/providers/amp/start-amp-proxy.ts"
     },
+    "./src/providers/opencode/completion-detector.ts": {
+      "import": "./src/providers/opencode/completion-detector.ts",
+      "types": "./src/providers/opencode/completion-detector.ts"
+    },
     "./model-usage": {
       "import": "./src/model-usage.ts",
       "types": "./src/model-usage.ts"
