--- a/package.json
+++ b/package.json
@@ -31,8 +31,7 @@
     "react": "^19.2.2",
     "react-dom": "^19.2.2",
     "monaco-editor": "^0.53.0",
-    "convex": "1.29.3",
-    "cheerio": "^1.0.0"
+    "convex": "1.29.3"
   },
   "private": true,
   "scripts": {
